--- a/app/manifest.json
+++ b/app/manifest.json
@@ -3,9 +3,14 @@
   "name": "AudibleHero",
   "description": "List new books from your favorite authors and series",
   "version": "1.0",
+  "icons": {
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
+  },
   "content_scripts": [
     {
-      "matches": ["*://www.audible.com/**"],
+      "matches": ["*://www.audible.com/*"],
       "js": ["app.js"]
     }
   ]
