--- a/1.0.0/bower.json
+++ b/1.0.0/bower.json
@@ -7,6 +7,7 @@
     "bootstrap": "~3.3.4",
     "moment": "~2.10.2",
     "angular-bootstrap": "~0.13.0",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-filter": "~0.5.4"
   }
 }
