--- a/1.0.0/bower.json
+++ b/1.0.0/bower.json
@@ -2,7 +2,7 @@
   "name": "audiblehero",
   "dependencies": {
     "angular": "~1.3.14",
-    "lodash": "*",
+    "lodash": "3.9.0",
     "angular-ui-router": "~0.2.14",
     "bootstrap": "~3.3.4",
     "moment": "~2.10.2",
