--- a/app/manifest.json
+++ b/app/manifest.json
@@ -21,6 +21,7 @@
   },
   "permissions": [
     "storage",
+    "unlimitedStorage",
     "webRequest",
     "webRequestBlocking",
     "*://*.audible.com/*"
