--- a/app/bower.json
+++ b/app/bower.json
@@ -8,6 +8,7 @@
     "moment": "~2.10.2",
     "angular-bootstrap": "~0.13.0",
     "font-awesome": "~4.3.0",
-    "angular-filter": "~0.5.4"
+    "angular-filter": "~0.5.4",
+    "angular-smart-table": "~2.0.3"
   }
 }
