--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,10 @@
     "gulp": "^3.8.10",
     "gulp-add-src": "^0.2.0",
     "gulp-concat": "^2.4.3",
+    "gulp-connect": "^2.2.0",
     "gulp-gzip": "1.0.0",
     "gulp-less": "^3.0.1",
+    "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.1.0",
