--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "AudibleHero for Audible",
   "description": "List new books from your favorite authors and series on www.audible.com",
-  "version": "2",
+  "version": "3",
   "icons": {
     "16": "logo16.png",
     "48": "logo48.png",
@@ -10,13 +10,21 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.audible.com/*"],
-      "js": ["app.js"]
+      "matches": [
+        "*://*.audible.com/audiblehero"
+      ],
+      "js": [
+        "app.js"
+      ]
     }
   ],
+  "page_action": {
+    "default_title": "AudibleHero",
+    "default_icon": "logo16.png"
+  },
   "background": {
     "scripts": [
-      "nocookie.js"
+      "background.js"
     ]
   },
   "permissions": [
@@ -24,6 +32,7 @@
     "unlimitedStorage",
     "webRequest",
     "webRequestBlocking",
-    "*://*.audible.com/*"
+    "*://*.audible.com/*",
+    "tabs"
   ]
 }
