--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,14 @@
     "browserify-ngannotate": "^0.7.0",
     "bulkify": "^1.1.1",
     "debowerify": "^1.2.0",
+    "event-stream": "^3.3.2",
     "glob": "^5.0.3",
     "gulp": "^3.8.10",
     "gulp-add-src": "^0.2.0",
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
     "gulp-gzip": "1.0.0",
+    "gulp-if": "^2.0.0",
     "gulp-less": "^3.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "^1.3.0",
@@ -22,6 +24,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
     "mime": "^1.2.11",
+    "node-fs": "^0.1.7",
     "stringify": "^3.1.0",
     "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
