--- a/app/bower.json
+++ b/app/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "audiblehero",
   "dependencies": {
-    "angular": "~1.3.14",
-    "lodash": "3.9.0",
+    "angular": "1.4.7",
+    "lodash": "3.10.1",
     "angular-ui-router": "~0.2.14",
-    "bootstrap": "~3.3.4",
-    "moment": "~2.10.2",
-    "font-awesome": "~4.3.0",
-    "angular-filter": "~0.5.4",
-    "angular-smart-table": "~2.0.3"
+    "bootstrap": "3.3.5",
+    "moment": "2.10.6",
+    "font-awesome": "4.4.0",
+    "angular-filter": "0.5.7",
+    "angular-smart-table": "2.1.4"
   }
 }
