Add support for audible.com.au and audible.co.uk

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,9 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.audible.com/audiblehero"
+        "*://*.audible.com/audiblehero",
+        "*://*.audible.com.au/audiblehero",
+        "*://*.audible.co.uk/audiblehero"
       ],
       "js": [
         "app.js"
