Remove Azure-deploy setup
Extensions can't have external resources any longer,
so I'm forced to put the actual app inside the extension package.
This should not affect end users and the change should happen
seamlessly.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "AudibleHero for Audible",
   "description": "List new books from your favorite authors and series on www.audible.com",
-  "version": "5",
+  "version": "6",
   "icons": {
     "16": "logo16.png",
     "48": "logo48.png",
@@ -19,6 +19,11 @@
         "app.js"
       ]
     }
+  ],
+  "web_accessible_resources": [
+    "app.css",
+    "fonts/*",
+    "img/*"
   ],
   "page_action": {
     "default_title": "AudibleHero",
