--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "audiblehero",
-  "container": "audiblehero",
-  "version": "3.0.0",
+  "name": "audible-hero",
+  "description": "Series",
+  "version": "1.0.0",
+  "author": "Eirik Brandtzæg <eirikb@eirikb.no>",
+  "private": true,
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "material-design-lite": "^1.3.0",
+    "vue": "^2.2.1",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1"
+  },
   "devDependencies": {
-    "browserify": "9.0.3",
-    "browserify-inline": "^1.0.0-1",
-    "browserify-ngannotate": "^0.7.0",
-    "bulkify": "1.1.1",
-    "debowerify": "^1.2.0",
-    "event-stream": "^3.3.2",
-    "glob": "^5.0.3",
-    "gulp": "^3.8.10",
-    "gulp-add-src": "^0.2.0",
-    "gulp-concat": "^2.4.3",
-    "gulp-connect": "^2.2.0",
-    "gulp-gzip": "1.0.0",
-    "gulp-if": "^2.0.0",
-    "gulp-less": "^3.0.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-tap": "^0.1.3",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.2",
-    "mime": "^1.2.11",
-    "node-fs": "^0.1.7",
-    "stringify": "^3.1.0",
-    "uglifyify": "^3.0.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.3.0"
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-latest": "^6.0.0",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "shx": "^0.2.2",
+    "vue-loader": "^11.1.4",
+    "vue-template-compiler": "^2.2.1",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   }
 }
