Extension working with webpack-dev-server
Doesn't actually to hot reloading, but it will reload on save

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -15,6 +15,9 @@
         "*://*.audible.com.au/audiblehero",
         "*://*.audible.co.uk/audiblehero"
       ],
+      "css": [
+        "clear.css"
+      ],
       "js": [
         "init.js",
         "app.js"
