--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Eirik Brandtzæg <eirikb@eirikb.no>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "ext": "shx mkdir -p dist && shx cp -r ext/* dist/"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
