--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "material-design-lite": "^1.3.0",
+    "glob": "^7.1.2",
+    "material-components-web": "^0.14.0",
+    "scss-loader": "0.0.1",
     "vue": "^2.2.1",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
