Prepare script names and readme of dev
More info about how to start developing.
Renamed script "dev" (default from vue init webpack-simple) to "start".

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Eirik Brandtzæg <eirikb@eirikb.no>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "ext": "shx mkdir -p dist && shx cp -r ext/* dist/"
   },
