--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "^6.23.0",
     "glob": "^7.1.2",
     "lodash": "^4.17.4",
+    "lz-string": "^1.4.4",
     "material-components-web": "^0.14.0",
     "scss-loader": "0.0.1",
     "vue": "^2.2.1",
