--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-components-web": "^0.14.0",
     "scss-loader": "0.0.1",
     "vue": "^2.2.1",
+    "vue-analytics": "^4.4.0",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
