--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
     "start": "npm-run-all ext dev"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "glob": "^7.1.2",
-    "lodash": "^4.17.4",
-    "lz-string": "^1.4.4",
-    "material-components-web": "^0.22.0",
-    "npm-run-all": "^4.1.1",
+    "babel-polyfill": "6.26.0",
+    "glob": "7.1.2",
+    "lodash": "4.17.4",
+    "lz-string": "1.4.4",
+    "material-components-web": "0.22.0",
+    "npm-run-all": "4.1.1",
     "scss-loader": "0.0.1",
-    "vue": "^2.2.1",
-    "vue-analytics": "^4.4.0",
-    "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vue": "2.5.2",
+    "vue-analytics": "5.1.1",
+    "vue-router": "3.0.1",
+    "vuex": "3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-latest": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
-    "shx": "^0.2.2",
-    "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-latest": "6.24.1",
+    "cross-env": "5.1.0",
+    "css-loader": "0.28.7",
+    "file-loader": "1.1.5",
+    "node-sass": "4.5.3",
+    "sass-loader": "6.0.6",
+    "shx": "0.2.2",
+    "vue-loader": "11.1.4",
+    "vue-template-compiler": "2.5.2",
+    "webpack": "3.7.1",
+    "webpack-dev-server": "2.9.2"
   }
 }
