Change audiblehero landing page path/url
Changed from legal-terms to conditions-of-use.
Only need some kind of URL, and the previous url (logal-terms)
seems to be removed.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -11,9 +11,9 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.audible.com/legal-terms?audible=hero",
-        "*://*.audible.com.au/legal-terms?audible=hero",
-        "*://*.audible.co.uk/legal-terms?audible=hero"
+        "*://*.audible.com/legal/conditions-of-use?audible=hero",
+        "*://*.audible.com.au/legal/conditions-of-use?audible=hero",
+        "*://*.audible.co.uk/legal/conditions-of-use?audible=hero"
       ],
       "css": [
         "clear.css"
