--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "start": "npm-run-all ext dev"
   },
   "dependencies": {
-    "@eirikb/domdom": "^5.5.0",
-    "@material/button": "^3.2.0",
-    "@material/card": "3.2.0",
-    "@material/layout-grid": "3.1.0",
-    "@material/textfield": "3.2.0",
+    "@eirikb/domdom": "^5.7.0",
+    "@material/button": "^7.0.0",
+    "@material/card": "7.0.0",
+    "@material/layout-grid": "^7.0.0",
+    "@material/linear-progress": "^7.0.0",
+    "@material/progress-indicator": "^7.0.0",
+    "@material/textfield": "^7.0.0",
     "lz-string": "1.4.4"
   },
   "devDependencies": {
@@ -24,8 +26,8 @@
     "ava": "^3.12.1",
     "browser-env": "^3.3.0",
     "npm-run-all": "4.1.5",
-    "parcel": "1.12.3",
-    "sass": "1.22.12",
+    "parcel": "^1.12.4",
+    "sass": "1.26.10",
     "shx": "0.3.2",
     "ts-node": "^9.0.0",
     "typescript": "^3.9.5"
