--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material/layout-grid": "^7.0.0",
     "@material/linear-progress": "^7.0.0",
     "@material/progress-indicator": "^7.0.0",
+    "@material/select": "^7.0.0",
     "@material/textfield": "^7.0.0",
     "lz-string": "1.4.4"
   },
