--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "AudibleHero for Audible",
   "description": "Find missing books from your series on www.audible.com",
-  "version": "25",
+  "version": "27",
   "icons": {
     "16": "logo16.png",
     "48": "logo48.png",
@@ -16,7 +16,8 @@
         "*://*.audible.co.uk/legal/conditions-of-use?audible=hero"
       ],
       "css": [
-        "clear.css"
+        "clear.css",
+        "main.css"
       ],
       "js": [
         "init.js",
