--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "app": "shx mv dist/main.js dist/app.js",
     "prod": "npm-run-all ext build app zip",
     "start": "npm-run-all ext dev",
+    "link": "prettier -c src",
     "test": "ava"
   },
   "dependencies": {
@@ -32,16 +33,11 @@
     "browser-env": "^3.3.0",
     "npm-run-all": "4.1.5",
     "parcel": "^1.12.4",
+    "prettier": "^2.3.2",
     "sass": "1.26.10",
     "shx": "0.3.2",
     "ts-node": "^9.0.0",
     "typescript": "^3.9.5"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
   },
   "ava": {
     "extensions": [
