--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "app": "shx mv dist/main.js dist/app.js",
     "prod": "npm-run-all ext build app zip",
     "start": "npm-run-all ext dev",
-    "lint": "prettier -c src",
+    "prettier": "prettier -c src",
+    "eslint": "eslint src",
     "test": "ava"
   },
   "dependencies": {
@@ -29,8 +30,11 @@
     "@types/chrome": "0.0.122",
     "@types/lodash": "^4.14.161",
     "@types/lz-string": "^1.3.34",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "ava": "^3.12.1",
     "browser-env": "^3.3.0",
+    "eslint": "^7.31.0",
     "npm-run-all": "4.1.5",
     "parcel": "^1.12.4",
     "prettier": "^2.3.2",
